2002-03-28 Naba Kumar <kh_naba@users.sourceforge.net>

	Anjuta kick start tutorial wirtten by:
	  Ishan Chattopadhyaya <ichattopadhyaya@yahoo.com>

	* manuals/C/anjuta-tutorial, manuals/C/anjuta-tutorial/Makefile.am,
	  manuals/C/anjuta-tutorial/anjuta-tutorial.sgml,
	  manuals/C/anjuta-tutorial/anjuta-tutorial-C.omf,
	  manuals/C/anjuta-tutorial/figures/*.png:
	  
	  Added files
	
	* configure.in, manuals/C/Makefile.am, manuals/C/topic.dat
	  
	  Modified files.
	
2002-03-28 Roel Vanhout <roel@stack.be>

	Reviewed by Naba Kumar <kh_naba@users.sourceforge.net>

	* src/aneditor.cxx, src/preferences.c, src/preferences.h,
	  src/preferences_gui.c:
	Added option to wrap around to beginning/end of file when on last bookmark
	and next/previous bookmark is pressed
	
2002-03-28 Naba Kumar <kh_naba@users.sourceforge.net>

	Patch from Philip Van Hoof <freax@pandora.be>
	
	* src/gnomefilelist.c:
	Added gimp like feature that changes the file extension of
	the filename entered in the selections when the file
	filter is changed.
	
2002-03-28 Naba Kumar <kh_naba@users.sourceforge.net>
	
	Patch from Roy Wood <roy.wood@filogix.com>
	
	* src/controls.c, src/find_text.c, src/find_text.h,
	  src/main_menubar.c, src/main_menubar.h, src/main_menubar_def.h,
	  src/mainmenu_callbacks.c, src/mainmenu_callbacks.h:
	  
	  Menuitem for entering currently selected text as find target,
	  added key accel for "find next" and changed some key accels for
	  other key for consistency.
	  
	* src/utilities.c:
	  Cleaned up code.
	
2002-03-27 Naba Kumar <kh_naba@users.sourceforge.net>

	* src/watch.c, src/watch.h, src/watch_cbs.c,
	  src/watch_cbs.h, src/watch_gui.c:
	
	  Patch from Jeroen van der Vegt <A.J.vanderVegt@ITS.TUDelft.nl>
	
	  Added change watch entries feature
	  and Watch entries modify on double click fixed.

2002-03-27 Naba Kumar <kh_naba@users.sourceforge.net>

	* src/mainmenu_callbacks.c:
	
	  Project commit should not bypass dialog as
	  we need to get the cvs log from the user.