@@ -1361,49 +1361,49 @@ static GnomeUIInfo cvs_menu_uiinfo[NUM_CVS_SUBMENUS+1] = {
 	 GNOME_APP_UI_ITEM, N_("Update"),
 	 N_("Update current working copy"),
 	 on_cvs_update_file_activate, NULL, NULL,
-	 GNOME_APP_PIXMAP_STOCK, GNOME_STOCK_MENU_PREF,
+	 GNOME_APP_PIXMAP_NONE, NULL,
 	 0, 0, NULL},
 	{
 	 /* 1 */
 	 GNOME_APP_UI_ITEM, N_("Commit"),
 	 N_("Commit your changes to the repositry"),
 	 on_cvs_commit_file_activate, NULL, NULL,
-	 GNOME_APP_PIXMAP_STOCK, GNOME_STOCK_MENU_PREF,
+	 GNOME_APP_PIXMAP_NONE, NULL,
 	 0, 0, NULL},
 	{
 	 /* 2 */
 	 GNOME_APP_UI_ITEM, N_("Status"),
 	 N_("Print the status of a file"),
 	 on_cvs_status_file_activate, NULL, NULL,
-	 GNOME_APP_PIXMAP_STOCK, GNOME_STOCK_MENU_PREF,
+	 GNOME_APP_PIXMAP_NONE, NULL,
 	 0, 0, NULL},
 	{
 	 /* 3 */
 	 GNOME_APP_UI_ITEM, N_("Get Log"),
 	 N_("Print the cvs log"),
 	 on_cvs_log_file_activate, NULL, NULL,
-	 GNOME_APP_PIXMAP_STOCK, GNOME_STOCK_MENU_PREF,
+	 GNOME_APP_PIXMAP_NONE, NULL,
 	 0, 0, NULL},
 	{
 	 /* 4 */
 	 GNOME_APP_UI_ITEM, N_("Add file"),
 	 N_("Add a file to the repositry"),
 	 on_cvs_add_file_activate, NULL, NULL,
-	 GNOME_APP_PIXMAP_STOCK, GNOME_STOCK_MENU_PREF,
+	 GNOME_APP_PIXMAP_NONE, NULL,
 	 0, 0, NULL},
 	{
 	 /* 5 */
 	 GNOME_APP_UI_ITEM, N_("Remove file"),
 	 N_("Remove a file from the repositry"),
 	 on_cvs_remove_file_activate, NULL, NULL,
-	 GNOME_APP_PIXMAP_STOCK, GNOME_STOCK_MENU_PREF,
+	 GNOME_APP_PIXMAP_NONE, NULL,
 	 0, 0, NULL},
 	{
 	 /* 6 */
 	 GNOME_APP_UI_ITEM, N_("Diff"),
 	 N_("Make a diff between a the working copy and the repositry"),
 	 on_cvs_diff_file_activate, NULL, NULL,
-	 GNOME_APP_PIXMAP_STOCK, GNOME_STOCK_MENU_PROP,
+	 GNOME_APP_PIXMAP_NONE, NULL,
 	 0, 0, NULL},
 	 GNOMEUIINFO_SEPARATOR, /* 7 */
 	{
@@ -1411,42 +1411,42 @@ static GnomeUIInfo cvs_menu_uiinfo[NUM_CVS_SUBMENUS+1] = {
 	 GNOME_APP_UI_ITEM, N_("Update project"),
 	 N_("Update the working copy of a project"),
 	 on_cvs_update_project_activate, NULL, NULL,
-	 GNOME_APP_PIXMAP_STOCK, GNOME_STOCK_MENU_PROP,
-	 0, 0, NULL},
+	 GNOME_APP_PIXMAP_NONE, NULL,
+	 GDK_U, GDK_MOD1_MASK | GDK_CONTROL_MASK, NULL},
 	{
 	 /* 9 */
 	 GNOME_APP_UI_ITEM, N_("Commit project"),
 	 N_("Commit the local changes in your project to the repositry"),
 	 on_cvs_login_activate, NULL, NULL,
-	 GNOME_APP_PIXMAP_STOCK, GNOME_STOCK_MENU_PROP,
+	 GNOME_APP_PIXMAP_NONE, NULL,
 	 0, 0, NULL},
 	{
 	 /* 10 */
 	 GNOME_APP_UI_ITEM, N_("Import project"),
 	 N_("Import project to a new module in the repositry"),
 	 on_cvs_import_project_activate, NULL, NULL,
-	 GNOME_APP_PIXMAP_STOCK, GNOME_STOCK_MENU_PROP,
+	 GNOME_APP_PIXMAP_NONE, NULL,
 	 0, 0, NULL},
 	 {
 	 /* 11 */
 	 GNOME_APP_UI_ITEM, N_("Status project"),
 	 N_("Print the status of the project"),
 	 on_cvs_project_status_activate, NULL, NULL,
-	 GNOME_APP_PIXMAP_STOCK, GNOME_STOCK_MENU_PROP,
+	 GNOME_APP_PIXMAP_NONE, NULL,
 	 0, 0, NULL},
 	 {
 	 /* 12 */
 	 GNOME_APP_UI_ITEM, N_("Get project log"),
 	 N_("Print the status of the project"),
 	 on_cvs_project_log_activate, NULL, NULL,
-	 GNOME_APP_PIXMAP_STOCK, GNOME_STOCK_MENU_PROP,
+	 GNOME_APP_PIXMAP_NONE, NULL,
 	 0, 0, NULL},
 	{
 	 /* 13 */
 	 GNOME_APP_UI_ITEM, N_("Diff project"),
 	 N_("Make a diff between the working copy and the repositry of a project"),
 	 on_cvs_project_diff_activate, NULL, NULL,
-	 GNOME_APP_PIXMAP_STOCK, GNOME_STOCK_MENU_PROP,
+	 GNOME_APP_PIXMAP_NONE, NULL,
 	 0, 0, NULL},
 	GNOMEUIINFO_SEPARATOR, /* 14 */
 	{
@@ -1454,7 +1454,7 @@ static GnomeUIInfo cvs_menu_uiinfo[NUM_CVS_SUBMENUS+1] = {
 	 GNOME_APP_UI_ITEM, N_("Login"),
 	 N_("Login to a password server"),
 	 on_cvs_login_activate, NULL, NULL,
-	 GNOME_APP_PIXMAP_STOCK, GNOME_STOCK_MENU_PROP,
+	 GNOME_APP_PIXMAP_NONE, NULL,
 	 0, 0, NULL},
 	GNOMEUIINFO_SEPARATOR, /* 16 */ 
 	{
